@@ -83,6 +83,8 @@ Friday, August 30, 2024 / The Tcpdump Group
       Allow attaching to links owned by a non-global zone.  (Based on
         pull request #1202.)
       Fix AF_LINK handling on illumos.
+      Fix not to ignore logical interfaces in fad-gifc.c and
+        fad-glifc.c.
     macOS:
       Redid the availability macros to be closer to what Apple's doing
         in recent SDKs, including tagging pcap-namedb.h routines.
